--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}Blog{% endblock %}
 
@@ -15,6 +15,12 @@
                 <th>Title</th>
                 <td>{{ blog.title }}</td>
             </tr>
+            {%  if blog.category %}
+            <tr>
+                <th>Category</th>
+                <td>{{ blog.category.name }}</td>
+            </tr>
+            {% endif %}
             <tr>
                 <th>Description</th>
                 <td>{{ blog.description }}</td>
