--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,39 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}Hello DefaultController!{% endblock %}
 
 {% block body %}
-ID = {{ id }}
+    <h1>Blog index</h1>
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Text</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for blog in blogs %}
+        <tr>
+            <td>{{ blog.id }}</td>
+            <td>{{ blog.title }}</td>
+            <td>{{ blog.description }}</td>
+            <td>{{ blog.text }}</td>
+            <td>
+                <a href="{{ path('/blog/{id}' , {'id' : blog.id}) }}">show</a>
+                <a href="{{ path('/blog/{id}/edit' , {'id' : blog.id}) }}">edit</a>
+            </td>
+        </tr>
+        {% else %}
+        <tr>
+            <td colspan="5">no records found</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('blog/new') }}">Create new</a>
 {% endblock %}
