--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,11 +1,13 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}New Blog{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
-
-    {{ include('category/_form.html.twig') }}
-
-    <a href="{{ path('app_category_index') }}">back to list</a>
+    <h1>Create new Blog</h1>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn btn-primary">Save</button>
+    {{ form_end(form) }}
+    <br/>
+    <a href="{{ path('app_blog_index') }}"><button class="btn btn-success">back to list</button></a>
 {% endblock %}
