--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -27,17 +27,21 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          {% if app.user is null %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="{{ url('app_user_index') }}">Register</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url('app_user_index') }}">Users</a>
-          </li>
+          {% endif %}
+          {% if app.user %}
           <li class="nav-item">
             <a class="nav-link" href="{{ path('_logout_main') }}">Logout</a>
           </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
